crates/jarl-core/src/lints/base/rep_len/snapshots/jarl_core__lints__base__rep_len__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/base/rep_len/mod.rs
expression: "get_unsafe_fixed_text(vec![\"rep(x, length.out = 4L)\",\n\"base::rep(length.out = 50, x = 1:10)\", \"rep(length.out = 50, 1:10)\",],\n\"rep_len\",)"
---
OLD:
====
rep(x, length.out = 4L)
NEW:
====
rep_len(x, 4L)

OLD:
====
base::rep(length.out = 50, x = 1:10)
NEW:
====
base::rep_len(1:10, 50)

OLD:
====
rep(length.out = 50, 1:10)
NEW:
====
rep_len(1:10, 50)
